feat: implement get firewall state interface
